style.css
/* toggle */
.global-nav-toggle {
  z-index: 999;
  position: fixed;
  top: 0;
  right: 0;
  display: flex;
  justify-content: center;
  align-items: center;
  width: 60px;
  height: 60px;
  background-color: rgba(0, 0, 0, 0.7);
}

.global-nav-toggle__line {
  position: relative;
  width: 50%;
  height: 25%;
}

.global-nav-toggle__line::before,
.global-nav-toggle__line::after {
  position: absolute;
  left: 50%;
  transform: translate(-50%, 0);
  display: block;
  width: 100%;
  height: 2px;
  content: '';
  background-color: #ffffff;
  transition: all 0.2s cubic-bezier(0.25, 1, 0.5, 1);
}

.global-nav-toggle__line::before {
  top: 0;
}

.global-nav-toggle__line::after {
  bottom: 0;
}

.global-nav-toggle.is-active .global-nav-toggle__line::before {
  top: 50%;
  transform: translate(-50%, -50%) rotate(45deg);
}

.global-nav-toggle.is-active .global-nav-toggle__line::after {
  top: 50%;
  transform: translate(-50%, -50%) rotate(-45deg);
}

/* global-nav */
.global-nav {
  z-index: 900;
  position: fixed;
  top: 0;
  left: 0;
  transform: translate(100%, 0);
  visibility: hidden;
  opacity: 0;
  display: block;
  width: 100%;
  height: 100%;
  background-color: #ffffff;
  transition: all 0.4s cubic-bezier(0.25, 1, 0.5, 1);
}

.global-nav__content {
  overflow-y: auto;
  margin-top: 60px;
  height: calc(100% - 60px);
  padding-right: 5%;
  padding-bottom: 5vh;
  padding-left: 5%;
}

.global-nav.is-active {
  transform: translate(0, 0);
  visibility: visible;
  opacity: 1;
}

